<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="quiz_certificate_language_label">Certificate language</string>
    <string name="quiz_certificate_language_hint">Names and custom details stay as typed. Enter them in the language you want on the certificate.</string>
    <string name="quiz_certificate_language_ready">Certificate language: %1$s</string>
    <string name="quiz_certificate_date_confirm">OK</string>
    <string name="quiz_certificate_date_cancel">Cancel</string>
    <string name="quiz_certificate_date_picker_title">Date</string>
</resources>
